# glowing-octo-fishstick

./: .gitignore  README.md  functions.py  index.html  main.py  pyodide-filter.py  pyproject.toml  script.js  style.css
.github/workflows/: build-deploy.yml  deploy.yml  lint-and-test.yml  test.yml  testing.yml
data/: toast_quotes.json
frontend/: script.js  styles.css
js/: package-lock.json  package.json
js/src/: script.js
js/tests/: loadPythonCode.test.js  runPython.test.js  setupPyodide.test.js
math-interactive-site/: script.js
python/: pyproject.toml
python/data/: test.json
python/src/: get_quote.py  main.py  pyodide-filter.py  pyodide_filter.py
python/src/math_utils/: functions.py
python/tests/: test_glowing_octo_fishstick.py
src/glowing_octo_fishstick/: __init__.py
tests/: test_glowing_octo_fishstick.py
