[project]
name = "glowing-octo-fishstick"
version = "0.1.0"
description = "GitHub Actions practice repository"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "numpy>=2.2.6",
]

[dependency-groups]
dev = [
    "toml>=0.10.2",
    "typer>=0.16.0",
    "pytest>=8.4.1",
]

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"
